	PR target/14047 	* config/avr/avr.c (avr_progmem_p): Add "attributes" parameter. 	(avr_insert_attributes): Pass "attributes" to avr_progmem_p. 	* config/avr/avr-protos.h (avr_progmem_p): Change prototype.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@79433 138bc75d-0d04-0410-961f-82ee72b054a4